Fix high contrast mode for radio buttons
Refs: #6223

--- a/packages/themes/bmf/src/components/input-radio.scss
+++ b/packages/themes/bmf/src/components/input-radio.scss
@@ -156,6 +156,9 @@
 
 				&:before {
 					background-color: var(--color-midnight);
+					@media (forced-colors: active) {
+						background: selectedItem !important;
+					}
 				}
 			}
 		}
